<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeBack"
    tools:context=".SignUp">

    <com.theartofdev.edmodo.cropper.CropImageView
        android:id="@+id/cropImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:cardCornerRadius="60dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/camera" />
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/SignIn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="50dp"
        android:text="@string/sign_In"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="60dp"
            android:background="#00FFFFFF"
            android:orientation="vertical">

            <EditText
                android:id="@+id/signUpName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enterName"
                android:inputType="text"
                android:textColor="@color/purple_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/cpp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccpDialog_allowSearch="true"
                    app:ccpDialog_backgroundColor="@color/white"
                    app:ccpDialog_fastScroller_bubbleColor="@color/purple_200"
                    app:ccpDialog_fastScroller_handleColor="@color/purple_200"
                    app:ccpDialog_initialScrollToSelection="true"
                    app:ccpDialog_keyboardAutoPopup="false"
                    app:ccpDialog_searchEditTextTint="@color/purple_200"
                    app:ccpDialog_showCloseIcon="true"
                    app:ccpDialog_showFastScroller="false"
                    app:ccpDialog_showPhoneCode="true"
                    app:ccpDialog_showTitle="false"
                    app:ccpDialog_textColor="@color/purple_200"
                    app:ccp_arrowColor="@color/purple_200"
                    app:ccp_arrowSize="20dp"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_autoDetectLanguage="true"
                    app:ccp_autoFormatNumber="true"
                    app:ccp_clickable="true"
                    app:ccp_contentColor="@color/purple_200"
                    app:ccp_countryAutoDetectionPref="SIM_ONLY"
                    app:ccp_rememberLastSelection="true"
                    app:ccp_selectionMemoryTag="signupCCP"
                    app:ccp_showArrow="true"
                    app:ccp_showFlag="false"
                    app:ccpDialog_showFlag="false"
                    app:ccp_showNameCode="false"
                    app:ccp_showPhoneCode="true"
                    app:ccp_textGravity="RIGHT"
                    app:ccp_textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SignUpPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/enter_phone_number" />

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/SignUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/sign_up"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="60dp"
        android:text="@string/signup"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/have_an_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/SignIn" />
    <!-- Image Cropper fill the remaining available height -->

</androidx.constraintlayout.widget.ConstraintLayout>