<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeBack"
    tools:context=".converSation">

  <ImageButton
      android:id="@+id/converCall2"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="16dp"
      android:background="#00FFFFFF"
      android:contentDescription="@string/call"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:srcCompat="@drawable/send"
      app:tint="@color/purple_200" />

  <androidx.cardview.widget.CardView
      android:id="@+id/cardView5"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      app:cardBackgroundColor="#1AFFFFFF"
      app:cardCornerRadius="40dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/profilepic"
        app:srcCompat="@drawable/woman" />
  </androidx.cardview.widget.CardView>

  <ImageButton
      android:id="@+id/converMenu"
      android:layout_width="55dp"
      android:layout_height="55dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:background="#00FFFFFF"
      android:contentDescription="@string/menu"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/menu"
      app:tint="@color/purple_200" />

  <ImageButton
      android:id="@+id/converCall"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="90dp"
      android:background="#00FFFFFF"
      android:contentDescription="@string/call"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/call"
      app:tint="@color/purple_200" />

  <androidx.cardview.widget.CardView
      android:id="@+id/inputs"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="16dp"
      app:cardCornerRadius="30dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/converCall2"
      app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="#00FFFFFF"
          android:hint="Tap here to write"
          android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      app:cardBackgroundColor="#05FFFFFF"
      app:cardCornerRadius="20dp"
      app:cardElevation="0dp"
      app:layout_constraintBottom_toTopOf="@+id/inputs"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cardView5" />


  <TextView
      android:id="@+id/converName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:text="Umme Maisun"
      android:textColor="@color/purple_200"
      android:textStyle="bold"
      app:layout_constraintStart_toEndOf="@+id/cardView5"
      app:layout_constraintTop_toBottomOf="@+id/converOnline" />

  <TextView
      android:id="@+id/converOnline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="Online"
      android:textStyle="bold"
      app:layout_constraintStart_toEndOf="@+id/cardView5"
      app:layout_constraintTop_toTopOf="@+id/cardView5" />


</androidx.constraintlayout.widget.ConstraintLayout>